micromobility_car_navigation/local/Project/dev_ws/log/build_2021-03-22_14-53-35/navigation/stderr.log
  File "/home/user/Projects/dev_ws/install/navigation/lib/python3.8/site-packages/navigation/navigation_handler.py", line 48
    else:
    ^
SyntaxError: invalid syntax

